# MadXTools

./: .gitignore  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: syntax.yml  test_linux_3.8.yml
madxtools/: __init__.py  tablefs.py
tests/: conftest.py  dummy.py  fodothin_90.tfs  fodothintrack_90.tfs.obs0001.p0001  test_init.py  test_tablefs.py
tests/files/: fodothin_90.tfs  particles.one
