[metadata]
name = MadXTools
version = attr: madxtools.__version__
author = University of Oslo
author_email = k.n.sjobak@fys.uio.no
description = Python 3 tool for handling MadX files
url = https://github.com/AcceleratorPhysicsUiO/MadXTools
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.md
license = GNU General Public License v3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
python_requires = >=3.6
project_urls =
    Source Code = https://github.com/AcceleratorPhysicsUiO/MadXTools

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E241,E251,E261,E266,E302,E305
max-line-length = 99
